--- a/button_clicker/index.html
+++ b/button_clicker/index.html
@@ -10,27 +10,53 @@
 </head>
 
 <body>
-    <div id="navbar">
-        <h1>Dojonary</h1>
-            <div id="searchbar">
-                <input type="text" placeholder="Search">
-            </div>
+    <div id="container">
+        <div id="navbar">
+            <h1>Dojonary</h1>
+            <input class="searchbar" type="text" placeholder="Search">
             <button class="login">Login</button>
-        </div>    
-        
+        </div>
         <div id="main">
-            <div id="leftninja">
-                <div class="ninja1"></div>
-                <div class="ninja1"></div>
-            </div>
-            <div id="rightninja">
-                <div id="youbox">
-                    
+            <!--leftside-->
+            <div class="ninjanouns">
+                <div class="ninjanoun1">
+                    <div class="title">
+                        <h2>ninja</h2>
+                        <h4>noun</h4>
+                        <p class="plural">Plural:ninjas</p>
+                        <button class="ninja-likes">13 likes</button>
+                    </div>
+
+                    <div class="definition">
+                        <div class="define">
+                            <p>A practitioner skilled in the <span>Japanese</span> art of <span>ninjutsu</span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="ninjanoun2">
+                    <div class="title">
+                        <h2>ninja</h2>
+                        <h4>noun</h4>
+                        <p>Plural:ninjas</p>
+                        <button class="ninja-likes">37 likes</button>
+                    </div>
+
+                    <div class="definition">
+                        <div class="define">
+                            <p>A <span>programmer</span> who breaks down problems with <span>zen</span>-like focus </p>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-        </div>
-   
+            <!--Rightside-->
+            <div class="you">
+                <div class="dojoyou">
+                    <p>Dojonary is defined by YOU</p>
+                    <button class="defbutton">Add Definition</button>
+                </div>
+            </div>
+    </div>
+</div>
 </body>
 
 </html>
