login toggle button changed

--- a/button_clicker/index.html
+++ b/button_clicker/index.html
@@ -24,7 +24,7 @@
                         <h2>ninja</h2>
                         <h4>noun</h4>
                         <p class="plural">Plural:ninjas</p>
-                        <button class="ninja-likes" onclick="alert('Nija was liked')">13 likes</button>
+                        <button class="ninja-likes" onclick="personal()">13 likes</button>
                     </div>
 
                     <div class="definition">
@@ -38,7 +38,7 @@
                         <h2>ninja</h2>
                         <h4>noun</h4>
                         <p>Plural:ninjas</p>
-                        <button class="ninja-likes">37 likes</button>
+                        <button class="ninja-likes" onclick="personal()">37 likes</button>
                     </div>
 
                     <div class="definition">
