--- a/liking_likes/index.html
+++ b/liking_likes/index.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liking Like</title>
     <link rel="stylesheet" href="style.css">
+  
+  
+   
 </head>
+
 <body>
 <div class="container">
     <div class="user">
         <h2>Some User</h2>
-        <button id="like_button">Like</button></div>
+        <p id="like_button"> 3 like(s) </p> 
+        <button onclick="add1()">Like</button>
+    </div>
     <p>This is some filler text, it can say anything we like</p>
 </div>
     
+
 </body>
+
+
 </html>
