--- a/liking_likes/index.html
+++ b/liking_likes/index.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="profile_column">
                 <div class="profile_content">
-                    <img class="profilepic" src="imgs/Githubprofile.jpg" alt="mindipic">
+                    <img class="profilepic" src="imgs/github_profile.jpg" alt="mindipic">
                     <div>
                         <a href="Add_an_Avatar" class="avatar_link"> Add an Avatar</a>
                         <h3 class="yourname">Mindi Garcia</h3>
